--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
@@ -379,6 +379,124 @@
         </div>
     </div>
 </div>
+<br />
+<div class="row">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <div class="card">
+            <div class="card-header">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h5>Listado de Actividades de la llamada # @Model.Llamada.DocEntry</h5>
+                    </div>
+                    <div class="col-md-4">
+
+
+                        <input hidden id="idLlamadaActividad" asp-for="Llamada.id" />
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-striped table-bordered first">
+                        <thead>
+                            <tr>
+                                <th>No. Actividad</th>
+                                <th>Tipo</th>
+                                <th>Fecha Creación</th>
+                                <th>Usuario Creador</th>
+
+                                <th>Detalle</th>
+
+
+
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.Actividades)
+                            {
+                                <tr>
+                                    <td>@item.DocEntry</td>
+
+                                    @{
+                                        switch (item.TipoActividad)
+                                        {
+                                            case 1:
+                                                {
+                                                    <td> Llamada Telefónica</td>
+
+                                                    break;
+                                                }
+                                            case 2:
+                                                {
+                                                    <td> Reunión</td>
+
+                                                    break;
+                                                }
+                                            case 3:
+                                                {
+                                                    <td> Tarea</td>
+
+                                                    break;
+                                                }
+                                            case 4:
+                                                {
+                                                    <td>Nota</td>
+
+                                                    break;
+                                                }
+                                            case 5:
+                                                {
+                                                    <td> Campaña</td>
+
+                                                    break;
+                                                }
+                                            case 6:
+                                                {
+                                                    <td> Otros</td>
+
+                                                    break;
+                                                }
+
+                                        }
+                                    }
+
+
+                                    <td>
+
+                                        @item.FechaCreacion
+                                    </td>
+                                    @{
+                                        var cardCode = item.UsuarioCreador.ToString();
+                                    }
+                                    <td>@(Model.Usuarios.Where(a => a.CardCode == cardCode).FirstOrDefault() == null ? "" : Model.Usuarios.Where(a => a.CardCode == cardCode).FirstOrDefault().Nombre) </td>
+
+                                    <td>@item.Detalle </td>
+
+                                </tr>
+                            }
+
+
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <th>No. Actividad</th>
+                                <th>Tipo</th>
+                                <th>Fecha Creación</th>
+                                <th>Usuario Creador</th>
+
+                                <th>Detalle</th>
+
+                            </tr>
+                        </tfoot>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="col-md-12">
         <div class="form-group">
