aprobar superior cotizaciones

--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Nuevo.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Nuevo.cshtml
@@ -1493,12 +1493,12 @@
 
                             @if (Model.EmpiezaPor == "P")
                             {
-                                <option value="1" selected>Producto</option>
+                                <option value="1" selected>Serie</option>
 
                             }
                             else
                             {
-                                <option value="1">Producto</option>
+                                <option value="1">Serie</option>
 
                             }
 
