--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
@@ -1873,13 +1873,13 @@
                             <div class="form-group">
                                 <label>Tipo de Reparación</label>
                                 <select id="idTraslado" class="form-control" asp-for="Encabezado.TipoReparacion" onchange="javascript: onChangeTipoMovimiento();">
-                                    <option value="0">Seleccione</option>
+                                    <option value="0">0-Reparado’ </option>
 
                                     <option value="4">1- Cotizar BackOffice </option>
 
                                     <option value="1">2- Solicitud </option>
                                     <option value="2">3- Devolución </option>
-                                    <option value="3">4- Cotizar </option>
+                                  @*  <option value="3">4- Cotizar </option>*@
 
 
 
