--- a/Sicsoft.Checkin.Web/Pages/OfertaVenta/Nuevo.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/OfertaVenta/Nuevo.cshtml
@@ -148,6 +148,7 @@
                         Bodega: Documento.Detalle[i].Bodega,
                         PorcentajeDescuento: Documento.Detalle[i].PorcentajeDescuento,
                         Cantidad: Documento.Detalle[i].Cantidad,
+                        CantidadDecimal: Documento.Detalle[i].Cantidad.toString(),
                         Impuesto: parseFloat(Documento.Detalle[i].Impuesto),
                         TaxOnly: Documento.Detalle[i].TaxOnly,
                         PrecioUnitario: Documento.Detalle[i].PrecioUnitario,
