--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Editar.cshtml
@@ -1029,15 +1029,16 @@
                 if ($("#Nombre").text().trim() == "") {
                     return false;
                 }
-                else if (parseInt($("#cantidad").text()) <= 0) {
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Oops...',
-                        text: 'Producto sin stock'
+                //else if (parseInt($("#cantidad").text()) <= 0) {
+                //    Swal.fire({
+                //        icon: 'error',
+                //        title: 'Oops...',
+                //        text: 'Producto sin stock'
 
-                    })
-                    return false;
-                } else {
+                //    })
+                //    return false;
+                //} 
+                else {
                     return true;
                 }
 
@@ -1551,6 +1552,12 @@
                         </div>
                     </div>
                     <div class="col-sm-6">
+                        <h3 class="text-dark mb-1">Información del Producto</h3>
+                        <div>Cod Articulo: @Model.Llamada.ItemCode</div>
+                        <div>Descripción: @Model.ProductoPadre.Nombre</div>
+
+                        <div># Serie: @Model.Llamada.SerieFabricante</div>
+                        <br />
                         <button id="agregaManoObra" class="btn btn-rounded btn-outline-danger" style="margin-top: 27%;" onclick="javascript: MeterManoObra()"> <i class="fas fa-plus "></i> Mano De Obra</button>
                     </div>
                 </div>
