--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
@@ -239,6 +239,12 @@
                         </div>
                     </div>
                     <div class="col-sm-6">
+                        <h3 class="text-dark mb-1">Información del Producto</h3>
+                        <div>Cod Articulo: @Model.Llamada.ItemCode</div>
+                        <div>Descripción: @Model.ProductoPadre.Nombre</div>
+
+                        <div># Serie: @Model.Llamada.SerieFabricante</div>
+                         
                     </div>
                 </div>
                 <div class="table-responsive-sm">
